# GameAndGraphicsProgramming

./: CMakeLists.txt  Thumbs.db  opifex.json
Assets/: imgui.ini
Assets/Models/: arrow.opm  person.opm  plane.opm  ring.opm  sphere.opm
Assets/Shaders/OPENGL_3_3/: Shadeless.frag  Shadeless.vert  ShadelessColor.frag  TexturedScreen.vert
Assets/Shaders/OPENGL_3_3/Common/: Blinn.frag  Blinn.vert  BlinnColor.frag  Texture2D.vert
Docs/: Vectors.psd
src/: GameState.cpp  Global.h  Grid.cpp  Grid.h  Main.cpp  Main.h  SlideManager.cpp  SlideManager.h
src/Slides/: 01_Vectors.cpp  01_Vectors.h  Gimbal_Lock.cpp  Gimbal_Lock.h
